lightdm (1.10.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 28 Apr 2014 23:24:23 +0200

lightdm (1.10.0-3) unstable; urgency=medium

  * debian/control:
    - add build-dep on dh-systemd.
  * debian/lightdm.postinst:
    - handle symlinks for systemd service files according to the currently
      selected display manager.
  * debian/lightdm.service:
    - add systemd service file, thanks Martin Pitt for the work.closes: #733220
  * debian/rules:
    - use dh systemd addon and configure it to not start the lightdm service
      at once.

 -- Yves-Alexis Perez <corsac@debian.org>  Mon, 28 Apr 2014 21:15:45 +0200

lightdm (1.10.0-2) unstable; urgency=medium

  * Upload to unstable.

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 22 Apr 2014 23:33:26 +0200

lightdm (1.10.0-1) experimental; urgency=medium

  * New upstream stable release.
  * debian/watch updated to track 1.10 branch.

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 08 Apr 2014 22:54:47 +0200

lightdm (1.9.13-1) experimental; urgency=medium

  * New upstream development release.

 -- Yves-Alexis Perez <corsac@debian.org>  Tue, 25 Mar 2014 22:04:52 +0100

lightdm (1.9.11-1) experimental; urgency=medium

  * New upstream development release.
  * debian/watch updated to track versions over 10.
  * debian/patches:
    - 02_fix-build-glib-before-2.40 removed, included upstream.

 -- Yves-Alexis Perez <corsac@debian.org>  Thu, 13 Mar 2014 09:19:21 +0100

lightdm (1.9.9-1) experimental; urgency=medium

  * New upstream development release.
  * debian/liblightdm-gobject-1-0.symbols, debian/liblightdm-qt-3-0.symbols:
    - add a symbol file to handle library dependencies more carefully.
  * debian/patches:
    - 02_fix-build-glib-before-2.40 added, fix FTBFS with glib before 2.40.

 -- Yves-Alexis Perez <corsac@debian.org>  Wed, 12 Mar 2014 11:00:42 +0100

lightdm (1.9.8-1) experimental; urgency=medium

  * New upstream development release.
