@@ -1,3 +1,4 @@
 01_set-default-path.patch
+02_fix-apparmor-profile.patch
 05_debianize-pam-files.patch
 06_allow_libpamsystemd_and_ck_together.patch
