@@ -1,6 +1,8 @@
 lightdm (1.10.1-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * debian/patches:
+    - really apply 02_fix-apparmor-profile, update it.  (really) closes:#736075
 
  -- Yves-Alexis Perez <corsac@debian.org>  Mon, 28 Apr 2014 23:24:23 +0200
 
